--- a/frontend/dota-2-abilityle/package.json
+++ b/frontend/dota-2-abilityle/package.json
@@ -22,6 +22,7 @@
   },
   "eslintConfig": {
     "extends": [
+      "@babel/plugin-transform-private-property-in-object",
       "react-app",
       "react-app/jest"
     ]
